[project]
name = "python"
version = "0.1.0"
description = ""
authors = [
    {name = "gridnev",email = "fox-niks@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "python", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
